--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<script src="bower_components/bootstrap-table/dist/bootstrap-table.js"></script>
 	<script src="bower_components/bootstrap-table/dist/locale/bootstrap-table-en-US.min.js"></script>
 	<script src="bower_components/pouchdb/dist/pouchdb.min.js"></script>
+	<script src="bower_components/pouchdb-authentication/dist/pouchdb.authentication.min.js"></script>
 	<script src="bower_components/angular/angular.js"></script>
   </head>
 <body>
