--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"  ng-app="health">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,7 +16,6 @@
 	<script src="bower_components/bootstrap-table/dist/locale/bootstrap-table-en-US.min.js"></script>
 	<script src="bower_components/pouchdb/dist/pouchdb.min.js"></script>
 	<script src="bower_components/pouchdb-authentication/dist/pouchdb.authentication.min.js"></script>
-	<script src="bower_components/angular/angular.js"></script>
   </head>
 <body>
 
