--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<script src="bower_components/bootstrap-table/dist/locale/bootstrap-table-en-US.min.js"></script>
 	<script src="bower_components/pouchdb/dist/pouchdb.min.js"></script>
 	<script src="bower_components/pouchdb-authentication/dist/pouchdb.authentication.min.js"></script>
+	<script src="bower_components/jquery.cookie/dist/jquery.cookie.js"></script>
   </head>
 <body>
 
