--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
   <div class="tab-content">
     <div role="tabpanel" class="tab-pane active" id="home">
 
+        <div id="myVitalsGraph"></div>
 
         <h1>Heath Summary</h1>
         <p>Below is a summary of the last 15 weeks. Average Weight, Blood Pressure, and Heart Rate, and Total Steps</p>
@@ -94,7 +95,8 @@
     </div>
     <div role="tabpanel" class="tab-pane fade" id="weight">Content Weight</div>
     <div role="tabpanel" class="tab-pane fade" id="messages">Content Messages</div>
-    <div role="tabpanel" class="tab-pane fade" id="vitals">Content Vitals</div>
+    <div role="tabpanel" class="tab-pane fade" id="vitals">
+    </div>
   </div>
 
 </div>
