--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 	<script src="bower_components/pouchdb-authentication/dist/pouchdb.authentication.min.js"></script>
 	<script src="bower_components/js-cookie/src/js.cookie.js"></script>
 	<script src="bower_components/bootstrap-slider/bootstrap-slider.js"></script>
-	<script src="bower_components/uuid/uuid.js"></script>
+    	<script src="bower_components/simple-uuid/uuid.js"></script>
+
  	<script src="weight.js"></script> 
  	<script src="vitals.js"></script> 
 
@@ -85,7 +86,7 @@
   <!-- Tab panes -->
   <div class="tab-content">
     <div role="tabpanel" class="tab-pane active" id="homeTab">
-        <h1>Heath Summary</h1>
+        <h1>Health Summary</h1>
         <p>Below is a summary of the last 15 weeks. Average Weight, Blood Pressure, and Heart Rate, and Total Steps</p>
         <h3>Weight Last 15 Weeks</h3>
         <div id="last5"></div>
@@ -132,20 +133,16 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Record Weight</h4>
+          <h4 class="modal-title">Record Current Weight</h4>
         </div>
         <div class="modal-body">
           <div class="form-group">
             <label class="sr-only" for="weight">Weight:</label>
-            <input type="input" class="form-control" id="weightVal" placeholder="Enter lbs">
-          </div>
-          <div class="form-group">
-            <label class="sr-only" for="pwd">Date:</label>
-            <input type="date" class="form-control" id="weightFormDate" placeholder="yyyy-mm-dd hh:mm">
+            <input type="input" class="form-control" id="weightVal" placeholder="Enter lbs"> 50 - 400lbs
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-success">Save</button>
+          <button type="button" id="saveWeightBtn" class="btn btn-success">Save</button>
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         </div>
       </div>
